--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,296 @@
+/*Обнуление*/
+*{padding:0;margin:0;border:0;}
+*,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
+:focus,:active{outline:none;}
+a:focus,a:active{outline:none;}
+nav,footer,header,aside{display:block;}
+html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display:none;}
+button{cursor:pointer;}
+button::-moz-focus-inner{padding:0;border:0;}
+a,a:visited{text-decoration:none;}
+a:hover{text-decoration:none;}
+ul li{list-style:none;}
+img{vertical-align:top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
+/*--------------------*/
+
 body{
-   background: rgb(248, 142, 142);
+   background: rgb(199, 195, 195);
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.wrapper {
+   min-height: 100%;
+   overflow: hidden;
+   display: flex;
+   flex-direction: column;
+}
+
+.content {
+   flex: 1 1 auto;
+}
+
+.hi {
+   background: rgb(0, 105, 53);
+   padding: 50px 0;
+}
+
+.conteiner {
+   max-width: 1180px;
+   margin: 0 auto;
+}
+
+.hi__row {
+   display: flex;
+   justify-content: space-between;
+}
+
+.hi__body {
+   color: #ffffff;
+   padding: 0px 30px 0px 0px;
+}
+
+.hi__tittle {
+   font-size: 60px;
+      font-family: "Arial";
+      filter: drop-shadow(0.5px 0.866px 0px rgba(0, 0, 0, 0.3));
+      margin: 0px 0px 40px 0px;
+}
+
+.hi__list {
+}
+
+.hi__list li {
+   background: url(../image/checkicon.png) 0 10px no-repeat;
+   font-size: 20px;
+      line-height: 36px;
+      color: #ffffff;
+      font-family: "Arial";
+      filter: drop-shadow(0.5px 0.866px 0px rgba(0, 0, 0, 0.3));
+      padding: 0px 0px 0px 35px;
+      margin: 0px 0px 15px 0px;
+}
+.hi__list li :last-child{
+   margin: 0;
+}
+
+.hi__img {}
+
+
+.what {
+   padding: 50px 0;
+}
+
+.what__row{
+   display: flex;
+}
+
+.conteiner{}
+
+.what__img {
+   flex: 0 0 430px;
+}
+.what__img img{
+   max-width: 100%;
+}
+
+.what__body {
+   flex: 1 1 auto;
+   padding: 0px 0px 0px 40px;
+}
+
+.what__title {
+   margin: 0px 0px 36px 0px;
+}
+
+.title {
+   font-size: 30px;
+      line-height: 36px;
+      color: #445161;
+      font-family: "Arial";
+}
+
+.what__text {}
+
+.what__text p{
+   font-size: 16px;
+      line-height: 24px;
+      color: #333333;
+      font-family: "Arial";
+      margin: 0px 0px 30px 0px;
+}
+.what__text p :last-child{
+   margin: 0;
+}
+
+
+.columns {
+   background: rgb(142, 216, 173);
+   padding: 50px 0;
+}
+
+.conteiner {}
+
+.columns__tittle {
+   text-align: center;
+   margin: 0px 0px 30px 0px;
+}
+
+.title {}
+
+.columns__row {
+   display: flex;
+   flex-wrap: wrap;
+   margin: 0 -8px;
+}
+
+.columns__column {
+   flex: 0 1 50%;
+   padding: 0 8px;
+   margin: 0px 0px 20px 0px;
+}
+
+.columns__item {}
+
+.item__row {
+   display: flex;
+}
+
+.item__img {
+   flex: 0 0 200px;
+}
+.item__img img{
+   height: 180px;
+   max-width: 100%;
+}
+
+.item__body {
+   flex: 1 1 auto;
+   padding: 0px 0px 0px 20px;
+}
+
+.item__tittle {
+   font-size: 24px;
+      line-height: 34px;
+      color: #445161;
+      font-family: "Arial";
+      margin: 0px 0px 30px 0px;
+}
+
+.item__text {
+   font-size: 16px;
+      line-height: 30px;
+      color: #333333;
+      font-family: "Arial";
+}
+
+.vertical {
+   padding: 50px 0;
+}
+
+.conteiner {}
+
+.vertical__tittle {
+   text-align: center;
+   margin: 0px 0px 30px 0px;
+}
+
+.title {}
+
+.vertical__body {
+   max-width: 990px;
+   margin: 0 auto;
+}
+
+.vertical__row {
+   display: flex;
+   margin: 0px -25px;
+}
+
+.vertical__column {
+  flex: 0 1 33,333%;
+  padding: 0px 25px;
+  display: flex;
+}
+
+.vertical__item {
+   background: rgb(0, 105, 53);
+   color: #ffffff;
+   border-radius: 5px;
+   border: 3px solid rgb(0, 105, 53);
+   padding: 20px 0 ;
+   display: flex;
+   flex-direction: column;
+}
+
+.vertical__label {
+   text-align: center;
+   font-size: 24px;
+      line-height: 30px;
+      color: #ffffff;
+      font-family: "Arial";
+      padding: 15px 0px;
+}
+
+.vertical__sublabel {
+   text-align: center;
+   font-size: 40px;
+      line-height: 24px;
+background-color: #ffffff;
+      font-family: "Arial";
+      color:rgb(0, 105, 53);
+      padding: 15px 0 ;
+}
+
+.vertical__text {
+   padding: 20px;
+   font-size: 14px;
+      line-height: 24px;
+      color: #ffffff;
+      font-family: "Arial";
+      flex: 1 1 auto;
+}
+.vertical__text p {
+   margin: 0px 0px 15px 0px;
+}
+.vertical__text p :last-child{
+   margin: 0;
+}
+.btn {
+   border-radius: 5px;
+      background-color: #ffffff;
+      display: block;
+      padding: 15px 0px;
+      font-size: 18px;
+         line-height: 18px;
+         color: #445161;
+         font-weight: bold;
+         font-family: "Arial";
+         text-align: center;
+}
+
+
+.footer {
+   background: rgb(142, 216, 173);
+}
+
+.footer__row {
+   display: flex;
+   height: 65px;
+   justify-content: center;
+   align-items: center;
+}
+
+.footer__text {
+   font-size: 15px;
+      line-height: 24px;
+      color: #445162;
+      font-family: "Arial";
+}
+
+
+a :hover{
+   color: #333333;
 }
